# lesson-search

./: .gitignore  Cargo.toml  README.md  index.html
gcv-ocr/: ocr.mjs  pdf.mjs
gcv-ocr/archive/mécanique-quantique/: Image (1).png.json  Image (10).png.json  Image (11).png.json  Image (12).png.json  Image (13).png.json  Image (14).png.json  Image (15).png.json  Image (16).png.json  Image (17).png.json  Image (18).png.json  Image (19).png.json  Image (2).png.json  Image (20).png.json  Image (21).png.json  Image (22).png.json  Image (23).png.json  Image (24).png.json  Image (25).png.json  Image (26).png.json  Image (27).png.json  Image (28).png.json  Image (29).png.json  Image (3).png.json  Image (4).png.json  Image (5).png.json  Image (6).png.json  Image (7).png.json  Image (8).png.json  Image (9).png.json
gcv-ocr/archive/optique/: page-1.png.json  page-10.png.json  page-11.png.json  page-12.png.json  page-13.png.json  page-14.png.json  page-15.png.json  page-16.png.json  page-17.png.json  page-18.png.json  page-19.png.json  page-2.png.json  page-20.png.json  page-21.png.json  page-22.png.json  page-23.png.json  page-24.png.json  page-25.png.json  page-26.png.json  page-27.png.json  page-28.png.json  page-29.png.json  page-3.png.json  page-30.png.json  page-31.png.json  page-32.png.json  page-33.png.json  page-34.png.json  page-35.png.json  page-36.png.json  page-37.png.json  page-38.png.json  page-39.png.json  (+20 more)
index-generator/: Cargo.toml
index-generator/src/: main.rs
lessons/: 02_series_numeriques.pdf.json  michelson.pdf.json
search-index/: Cargo.toml  build.rs
search-index-generator/: Cargo.toml
search-index-generator/src/: config.rs  main.rs  page_render_cache.rs
search-index/src/: index.rs  lib.rs  normalize.rs  search.rs  synonyms.txt
search-server/: Cargo.toml
search-server/src/: http_server.rs  main.rs  pdf_search.rs
src/: main.rs  pdf_search.rs
tools/gcv-ocr/: mkpdf.mjs  ocr.mjs
