[package]
name = "index-generator"
version = "0.1.0"
edition = "2021"

[dependencies]
search-index = { path = "../search-index" }
base64 = "0.13.0"
deunicode = "1.3.1"

[dependencies.blake3]
version = "1.3.1"
default-features = false

[dependencies.mupdf]
version = "0.3.0"
default-features = false

[dependencies.image]
version = "0.24.1"
default-features = false
features = ["jpeg"]
