[package]
name = "index-generator"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.13.0"
deunicode = "1.3.1"
search-index = { path = "../search-index" }
turbojpeg = "0.3.0"

[dependencies.blake3]
version = "1.3.1"
default-features = false

[dependencies.mupdf]
version = "0.3.0"
default-features = false
