[package]
name = "search-index-generator"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.13.0"
rayon = "1.5"
search-index = { path = "../search-index" }

[dependencies.libavif]
# TODO: Switch to crates.io when the fix to build libaom-sys on Linux lands.
git = "https://github.com/njaard/libavif-rs.git"
default-features = false
features = ["codec-aom"]

[dependencies.jpegxl-rs]
version = "0.6.1"
default-features = false
features = ["system-jxl"]

[dependencies.blake3]
version = "1.3.1"
default-features = false

[dependencies.mupdf]
version = "0.3.0"
default-features = false
